# useriam_companion_device_auth

./: .gitignore  AGENTS.md  OAT.xml  README.md  README_ZH.md  bundle.json  companion_device_auth.gni  hisysevent.yaml
frameworks/ets/ani/: BUILD.gn
frameworks/js/napi/: BUILD.gn  companion_device_auth_napi_map
frameworks/native/client/: BUILD.gn  BUILD.gni  companion_device_auth_client_map
frameworks/native/ipc/: BUILD.gn
param/: BUILD.gn  companion_device_auth.para  companion_device_auth.para.dac
sa_profile/: 945.json  BUILD.gn  companiondeviceauth.cfg
sa_profile/default/: 945.json
sa_profile/dynamic_load/: 945.json  companiondeviceauth.cfg
services/: .gitignore  AGENTS.md  BUILD.gn  BUILD.gni  CMakeLists.txt  build.sh  companion_device_auth_service_map
services/common/inc/: service_common.h  service_converter.h
services/companion/inc/: companion.h  companion_manager_impl.h
services/companion/src/: companion.cpp  companion_manager_impl.cpp
services/cross_device_comm/inc/: channel_manager.h  connection_manager.h  cross_device_comm_manager_impl.h  device_status_entry.h  device_status_manager.h  local_device_state_manager.h  local_device_status_manager.h  message_router.h
services/cross_device_comm/src/: channel_manager.cpp  connection_manager.cpp  cross_device_comm_manager_impl.cpp  device_status_entry.cpp  device_status_manager.cpp  local_device_status_manager.cpp  message_router.cpp
services/event_bus/inc/: event_bus_impl.h
services/event_bus/src/: event_bus_impl.cpp
services/external_adapters/inc/: access_token_kit_adapter.h  access_token_kit_adapter_impl.h  adapter_manager.h  device_manager_adapter.h  device_manager_adapter_impl.h  driver_manager_adapter_impl.h  sa_manager_adapter.h  soft_bus_adapter.h  soft_bus_adapter_impl.h  user_auth_adapter.h  user_auth_adapter_impl.h
services/external_adapters/security_command_adapter/: BUILD.gn  Cargo.toml  cbindgen.toml  rustfmt.toml
services/external_adapters/src/: access_token_kit_adapter_impl.cpp  adapter_manager.cpp  device_manager_adapter_impl.cpp  driver_manager_adapter_impl.cpp  sa_manager_adapter_impl.cpp  soft_bus_adapter_impl.cpp  user_auth_adapter_impl.cpp
services/fwk_comm/inc/: blocked_state_sync_scheduler.h  companion_auth_interface_adapter.h  companion_device_auth_all_in_one_executor.h  companion_device_auth_driver.h  companion_device_auth_executor_callback.h  default_executor_factory.h  fwk_comm_manager.h  fwk_common.h  pending_issue_token_manager.h
services/fwk_comm/src/: blocked_state_sync_scheduler.cpp  companion_auth_interface_adapter.cpp  companion_device_auth_all_in_one_executor.cpp  companion_device_auth_driver.cpp  companion_device_auth_executor_callback.cpp  default_executor_factory.cpp  fwk_comm_manager.cpp  pending_issue_token_manager.cpp
services/host_binding/inc/: host_binding.h  host_binding_manager_impl.h
services/host_binding/src/: host_binding.cpp  host_binding_manager_impl.cpp
services/misc/inc/: active_user_id_manager_impl.h  misc_manager_impl.h  system_param_manager_impl.h
services/misc/src/: constant_active_user_id_manager.cpp  constant_user_id_manager.cpp  default_active_user_id_manager.cpp  default_user_id_manager.cpp  misc_manager_impl.cpp  system_param_manager_impl.cpp
services/request/inc/: base_request.h  request_callback.h  request_factory_impl.h  request_manager_impl.h
services/request/src/: base_request.cpp  request_factory_impl.cpp  request_manager_impl.cpp
services/security_agent/: BUILD.gn  Cargo.toml  cbindgen.toml  gen_c_header.sh  rustfmt.toml
services/security_agent/inc/: companion_device_auth_ffi_util.h  security_agent_imp.h  security_agent_impl.h
services/security_agent/rust/: BUILD.gni  lib.rs
services/security_agent/src/: companion_device_auth_ffi_util.cpp  security_agent_impl.cpp
services/service_entry/inc/: available_device_subscription.h  base_service_core.h  base_service_initializer.h  callback_subscription_base.h  companion_device_auth_service.h  continuous_auth_subscription.h  subscription_manager.h  subscription_util.h  template_status_subscription.h
services/service_entry/src/: available_device_subscription.cpp  base_service_core.cpp  base_service_initializer.cpp  companion_device_auth_service.cpp  continuous_auth_subscription.cpp  subscription_manager.cpp  subscription_util.cpp  template_status_subscription.cpp
services/singleton/inc/: singleton_manager.h
services/singleton/src/: singleton_manager.cpp
services/soft_bus_cross_device_channel/inc/: soft_bus_channel.h  soft_bus_channel_common.h  soft_bus_connection_manager.h  soft_bus_device_status_manager.h  soft_bus_global_callbacks.h  soft_bus_socket.h
services/soft_bus_cross_device_channel/src/: soft_bus_channel.cpp  soft_bus_connection_manager.cpp  soft_bus_device_status_manager.cpp  soft_bus_global_callbacks.cpp  soft_bus_socket.cpp
services/utils/inc/: access_token_kit.h  backoff_retry_timer.h  callback_death_recipient.h  cda_attributes.h  error_guard.h  relative_timer.h  resident_task_runner.h  sa_status_listener.h  scope_guard.h  subscription.h  task_runner.h  task_runner_manager.h  temporary_task_runner.h  xcollie_helper.h
services/utils/src/: access_token_kit.cpp  backoff_retry_timer.cpp  callback_death_recipient.cpp  cda_attributes.cpp  relative_timer.cpp  resident_task_runner.cpp  sa_status_listener.cpp  subscription.cpp  task_runner_manager.cpp  temporary_task_runner.cpp  xcollie_helper.cpp
test/: test_config.gni
test/fake/: BUILD.gni  prefix_include.h
test/fake/common_event/: common_event_data.h  common_event_manager.h  common_event_subscribe_info.h  common_event_subscriber.h  common_event_support.h  matching_skills.h
test/fake/datashare/: data_ability_observer_interface.h  data_ability_observer_stub.h  datashare_errno.h  datashare_helper.cpp  datashare_helper.h  datashare_predicates.h  datashare_result_set.h
test/fake/device_manager/: device_manager.cpp  device_manager.h
test/fuzztest/: .gitignore  BUILD.gn
test/moduletest/: BUILD.gn  design.md
test/unittest/: BUILD.gn  CMakeLists.txt  test.sh
(+934 files in other folders)
