# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../companion_device_auth.gni")

# Install companion_device_auth.para and its DAC file under /system/etc/param.
group("param_files") {
  deps = [
    ":companion_device_auth.para",
    ":companion_device_auth.para.dac",
  ]
}

ohos_prebuilt_etc("companion_device_auth.para") {
  source = "companion_device_auth.para"
  relative_install_dir = "param"
  part_name = companion_device_auth_part_name
  subsystem_name = companion_device_auth_subsystem_name
}

ohos_prebuilt_etc("companion_device_auth.para.dac") {
  source = "companion_device_auth.para.dac"
  relative_install_dir = "param"
  part_name = companion_device_auth_part_name
  subsystem_name = companion_device_auth_subsystem_name
}
